--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dev_dependencies:
 flutter_launcher_icons:
     android: "launcher_icon"
     ios: true
-    image_path: "assets/logo/icon.png"
+    image_path: "assets/logo/applogo.png"
     min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter:
