detele haarcascade and repair landing page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   path: ^1.9.0
   image_picker: ^0.8.9
   permission_handler: ^11.3.0
-  image: ^4.1.7            # ✅ versi stabil terbaru dan cocok untuk manipulasi gambar
+  image: ^4.1.7           
   tflite_flutter: ^0.11.0
   google_mlkit_face_detection: ^0.13.1
 
@@ -30,7 +30,7 @@ flutter_launcher_icons:
     android: "launcher_icon"
     ios: true
     image_path: "assets/logo/applogo.png"
-    min_sdk_android: 21 # android min sdk min:16, default 21
+    min_sdk_android: 21 
 
 flutter:
   uses-material-design: true
