--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "D:/TUGAS AKHIR/apkTA/feelcheck/linux"
+    "cmake.sourceDirectory": "D:/TUGAS AKHIR/apk new/FeelCheck/linux"
 }
